web-emu: Fix overflow on Firefox

--- a/module/web-emu/styles/_emulator_disassembler.scss
+++ b/module/web-emu/styles/_emulator_disassembler.scss
@@ -10,6 +10,4 @@
 // ---------------------------------------------------------------------------------------------------------------------
 
 #emulator-disassembler {
-	width: 100%;
-	grid-column-start: debug;
 }
